--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
             <a href="/about">About</a>
             <a href="#">Features</a>
             <a href="#">Contact</a>
-            <a href="#">Log In</a>
+            <a href="/login">Log In</a>
         </div>
     </div>
 
