--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -5,6 +5,12 @@
     <title>Admin Panel</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Add any additional CSS files here -->
+    <style>
+        .fc-day-grid-event .fc-content {
+            white-space: normal;
+        }
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.css" />
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -16,13 +22,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Calendar</a>
+                    <a class="nav-link" href="#">Modify Lesson</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Create Lesson</a>
+                    <a class="nav-link" href="#">Modify Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Register New Student</a>
+                    <a class="nav-link" href="#">Modify Subjects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Modify Family</a>
                 </li>
                 <!-- Add more links as needed -->
             </ul>
@@ -34,18 +43,10 @@
         <h2>Dashboard</h2>
         <!-- Calendar and Stats -->
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 <!-- Calendar Placeholder -->
                 <div id="calendar-placeholder" style="min-height: 500px; background-color: #f0f0f0;">
                     <!-- Embed your calendar here -->
-                    <p>Calendar will go here</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <!-- Stats Placeholder -->
-                <div id="stats-placeholder" style="min-height: 500px; background-color: #f0f0f0;">
-                    <!-- Display your stats here -->
-                    <p>Stats will go here</p>
                 </div>
             </div>
         </div>
@@ -55,6 +56,46 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
+    <script>
+        $(document).ready(function() {
+            $('#calendar-placeholder').fullCalendar({
+                header: {
+                    left: 'prev,next today',
+                    center: 'title',
+                    right: 'month,agendaWeek,agendaDay'
+                },
+                defaultView: 'month',
+                navLinks: true,
+                editable: true,
+                eventLimit: true,
+                events: [
+                    {
+                        title: 'Math',
+                        start: '2022-01-01T10:00:00',
+                        end: '2022-01-01T12:00:00',
+                        tutor: 'John Doe'
+                    },
+                    {
+                        title: 'Science',
+                        start: '2022-01-02T14:00:00',
+                        end: '2022-01-02T16:00:00',
+                        tutor: 'Jane Doe'
+                    },
+                    {
+                        title: 'English',
+                        start: '2022-01-03T09:00:00',
+                        end: '2022-01-03T11:00:00',
+                        tutor: 'John Doe'
+                    }
+                ],
+                eventRender: function(event, element) {
+                    element.find('.fc-title').html(event.title + '<br>' + event.tutor);
+                }
+            });
+        });
+    </script>
     <!-- Add any additional JS files here -->
 </body>
 </html>
