--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -22,7 +22,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Modify Lesson</a>
+                    <a class="nav-link" href="/add_lesson">Modify Lesson</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Modify Users</a>
@@ -51,6 +51,21 @@
             </div>
         </div>
     </div>
+    <!-- Summary Statistics Widgets -->
+    <div class="statistics-widgets">
+        <!-- Income Summary Widget -->
+        <div class="widget income-statistics">
+        <h3>Monthly Income Summary</h3>
+        <p>${{ monthly_income_summary }}</p>
+        <a href="{{ url_for('detailed_statistics') }}">View Details</a>
+    </div>
+    <!-- Lessons Summary Widget -->
+    <div class="widget lesson-statistics">
+      <h3>Lessons This Month Summary</h3>
+      <p>{{ lessons_count_summary }}</p>
+      <a href="{{ url_for('detailed_statistics') }}">View Details</a>
+    </div>
+  </div>     
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
