--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Admin Panel</a>
+        <a class="navbar-brand" href="/admin_dashboard">Admin Panel</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -28,10 +28,10 @@
                     <a class="nav-link" href="#">Modify Users</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Modify Subjects</a>
+                    <a class="nav-link" href="/modify_subjects">Modify Subjects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Modify Family</a>
+                    <a class="nav-link" href="/modify_family">Modify Family</a>
                 </li>
                 <!-- Add more links as needed -->
             </ul>
