--- a/templates/add_student_to_F.html
+++ b/templates/add_student_to_F.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/add_lesson">Modify Lesson</a>
+                    <a class="nav-link" href="/modify_lessons">Modify Lesson</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Modify Users</a>
@@ -43,17 +43,31 @@
             </div>
             <div class="form-group">
                 <label for="last_name">Last Name</label>
-                <input type="text" class="form-control" id="last_name" name="last_name" required>
+                <input type="text" class="form-control" id="last_name" name="last_name" value="{{ family.name }}" required>
             </div>
-            <div>
-                <label for="last_name">Last Name</label>
-                <input type="text" class="form-control" id="last_name" name="last_name" required>                
+            <div class="form-group">
+                <label for="schooltype">School Type</label>
+                <select class="form-control" id="schooltype" name="schooltype_id" required>
+                    {% for schooltype in schooltypes %}
+                        <option value="{{ schooltype.schooltype_id }}">{{ schooltype.schooltype_name }}</option>
+                    {% endfor %}
+                </select>
             </div>
+            <div class="form-group">
+                <label for="date_of_birth">Date of Birth</label>
+                <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" required>
+            </div>
+            
             <!-- Additional fields for the student's details -->
             <button type="submit" class="btn btn-primary">Add Student</button>
         </form>
     </div>
+    
 
     <!-- Scripts (Bootstrap JS, etc.) -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    
 </body>
 </html>
