--- a/templates/create_family.html
+++ b/templates/create_family.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/add_lesson">Modify Lesson</a>
+                    <a class="nav-link" href="/modify_lessons">Modify Lesson</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Modify Users</a>
