--- a/templates/edit_student.html
+++ b/templates/edit_student.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Edit Family</title>
+    <title>Edit Student</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <!-- Additional styles can be added here -->
 </head>
 <body>
-    <!-- Navigation Bar -->
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">Admin Panel</a>
@@ -17,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="//modify_lessons">Modify Lesson</a>
+                    <a class="nav-link" href="/modify_lessons">Modify Lesson</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Modify Users</a>
@@ -35,25 +34,35 @@
 
     <!-- Main Content -->
     <div class="container mt-4">
-        <h2>Edit Family</h2>
-        <form action="{{ url_for('edit_family', family_id=family.id) }}" method="post">
+        <h2>Edit Student</h2>
+        <form action="{{ url_for('edit_student', student_id=student.StudentID) }}" method="post">
             <div class="form-group">
-                <label for="name">Family Name</label>
-                <input type="text" class="form-control" id="name" name="name" value="{{ family.name }}" required>
+                <label for="first_name">First Name</label>
+                <input type="text" class="form-control" id="first_name" name="first_name" value="{{ student.FirstName }}" required>
             </div>
             <div class="form-group">
-                <label for="address">Address</label>
-                <input type="text" class="form-control" id="address" name="address" value="{{ family.address }}">
+                <label for="last_name">Last Name</label>
+                <input type="text" class="form-control" id="last_name" name="last_name" value="{{ student.LastName }}" required>
             </div>
             <div class="form-group">
-                <label for="phone_num">Phone Number</label>
-                <input type="text" class="form-control" id="phone_num" name="phone_num" value="{{ family.phone_num }}">
+                <label for="date_of_birth">Date of Birth</label>
+                <input type="date" class="form-control" id="date_of_birth" name="date_of_birth" value="{{ student.DateOfBirth.isoformat() }}" required>
             </div>
-            <button type="submit" class="btn btn-primary">Update Family</button>
+            <div class="form-group">
+                <select class="form-control" id="schooltype" name="schooltype_id" required>
+                    {% for schooltype in schooltypes %}
+                        <option value="{{ schooltype.schooltype_id }}" 
+                            {% if student.schooltype_id == schooltype.schooltype_id %} selected {% endif %}>
+                            {{ schooltype.schooltype_name }}
+                        </option>
+                    {% endfor %}
+                </select>                
+            </div>
+            <button type="submit" class="btn btn-primary">Save Changes</button>
         </form>
     </div>
 
-    <!-- Bootstrap Scripts -->
+    <!-- Scripts (Bootstrap JS, etc.) -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
