--- a/templates/modify_family.html
+++ b/templates/modify_family.html
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/add_lesson">Modify Lesson</a>
+                    <a class="nav-link" href="/modify_lessons">Modify Lesson</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Modify Users</a>
@@ -61,7 +61,16 @@
                     <p>Phone: {{ family.phone_num }}</p>
                     <!-- Add more details as needed -->
                     <a href="{{ url_for('edit_family', family_id=family.id) }}" class="btn btn-primary btn-sm">Edit Family</a>
-                    <a href="{{ ulr_for('add_student_to_family', family_id=family-id) }}" class="btn btn-primary btn-sm">Add Student</a>
+                    <a href="{{ url_for('add_student_to_family', family_id=family.id) }}" class="btn btn-primary btn-sm">Add Student</a>
+                    <!-- List of Students in this Family -->
+                    <ul class="list-group mt-2">
+                        {% for student in family.students %}
+                        <li class="list-group-item">
+                            {{ student.FirstName }} {{ student.LastName }} - {{ student.DateOfBirth }}
+                            <a href="{{ url_for('edit_student', student_id=student.StudentID) }}" class="btn btn-secondary btn-sm">Edit Student</a>
+                        </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </li>
             {% endfor %}
