--- a/templates/create_user.html
+++ b/templates/create_user.html
@@ -43,8 +43,8 @@
             <div class="form-group">
                 <label for="role">Role</label>
                 <select class="form-control" id="role" name="role">
-                    <option value="tutor">Tutor</option>
-                    <option value="admin">Admin</option>
+                    <option value="tutor">tutor</option>
+                    <option value="admin">admin</option>
                     <!-- Add other roles as needed -->
                 </select>
             </div>
