--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="/modify_lessons">Modify Lesson</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Modify Users</a>
+                    <a class="nav-link" href="/modify_users">Modify Users</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/modify_subjects">Modify Subjects</a>
