--- a/templates/tutor_profile.html
+++ b/templates/tutor_profile.html
@@ -22,8 +22,10 @@
                     <a class="nav-link" href="/view_students">View Students</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/view_subjects">View Subjects</a>
+                    <a class="nav-link" href="/tutor/edit_tutor">View Subjects</a>
                 </li>
+                
+
             </ul>
         </div>
     </nav>
