--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/tutor/change_password">Passwort zurücksetzen</a>
+                    <a class="nav-link active" href="/tutor/change_password">Passwort zurücksetzen</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/tutor/view_students">Schüler anzeigen</a>
@@ -24,37 +24,26 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/tutor/lessons">Stunden-Übersicht</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/tutor/edit_tutor">Fächer anzeigen</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="container mt-4">
-        <h2>Fächer</h2>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Niveau</th>
-                    <th>Fach</th>
-                    <th>Löschen</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for subject in subjects %}
-                <tr>
-                    <td>{{ subject.schooltype.schooltype_name }}</td>
-                    <td>{{ subject.subject_name }}</td>
-                    <td><a href="/delete_subject/{{ subject.subject_id }}">Löschen</a></td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <button class="btn btn-primary" onclick="window.location.href='/add_subject'">Add Subject</button>
-    </div>
 
+    <!-- Password Form -->
+    <form action="/tutor/change_password" method="POST">
+        <label for="old_password">Old Password:</label>
+        <input type="password" id="old_password" name="old_password" required><br><br>
+        
+        <label for="new_password">New Password:</label>
+        <input type="password" id="new_password" name="new_password" required><br><br>
+        
+        <label for="repeat_password">Repeat Password:</label>
+        <input type="password" id="repeat_password" name="repeat_password" required><br><br>
+        
+        <button type="submit" class="btn btn-primary">Change Password</button>
+    </form>
+    
 
 </body>
-<script>
-    
-</script>
